--- a/first-app/src/components/App.sass
+++ b/first-app/src/components/App.sass
@@ -107,3 +107,10 @@
 .login_error
   color: red
   font-size: 8px
+
+.btn_profile
+  width: 50px
+  height: 50px
+  border-radius: 50%
+  &:hover
+    cursor: pointer
