--- a/first-app/src/components/App.css
+++ b/first-app/src/components/App.css
@@ -26,11 +26,32 @@
 }
 
 .list {
-  width: 250px;
+  width: 300px;
   height: 600px;
   border-radius: 10px;
   border: 2px double grey;
   background-color: beige;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.btn_profile {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+}
+
+.btn_profile:hover {
+  cursor: pointer;
 }
 
 .cards {
@@ -124,7 +145,7 @@
 
 .profile {
   background-color: black;
-  width: 350px;
+  width: 300px;
   height: 600px;
   border-radius: 10px;
   color: orange;
@@ -184,13 +205,44 @@
   font-size: 8px;
 }
 
-.btn_profile {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+.chat {
+  width: 300px;
+  height: 600px;
+  border: 2px double grey;
+  background-color: beige;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+  background-color: #fff4df;
+  color: cadetblue;
+  padding: 5px 0;
 }
 
-.btn_profile:hover {
+.chat_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px 10px;
+  height: 40px;
+}
+
+.btn_back {
+  color: grey;
+}
+
+.btn_back:hover {
   cursor: pointer;
 }
 /*# sourceMappingURL=App.css.map */
