--- a/first-app/src/components/App.css
+++ b/first-app/src/components/App.css
@@ -144,11 +144,10 @@
 }
 
 .profile {
-  background-color: black;
+  background-color: beige;
   width: 300px;
   height: 600px;
   border-radius: 10px;
-  color: orange;
   padding: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -160,6 +159,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border: 2px double grey;
+  color: cadetblue;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .profile_avatar {
