--- a/first-app/src/components/App.sass
+++ b/first-app/src/components/App.sass
@@ -83,15 +83,17 @@
     transform: rotate(360deg)
 
 .profile
-  background-color: black
+  background-color: beige
   width: 300px
   height: 600px
   border-radius: 10px
-  color: orange
   padding: 10px
   display: flex
   flex-direction: column
   align-items: center
+  border: 2px double grey
+  color: cadetblue
+  box-sizing: border-box
   &_avatar
     width: 70px
     height: 70px
